# mail_sender_tauri_vite_solid

./: LICENSE  README.md  index.html  package-lock.json  package.json  packageOld.json
src/: App.tsx  bg.js  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_handler.rs  main.rs  send_mail.rs
src/components/: Buttons.tsx  FormField.tsx  Header.tsx  InpitField.tsx  InputFieldDescription.tsx  Multiplier.tsx  TextareaField.tsx  TransitionJS.tsx
src/components/FormFields/: CheckboxField.tsx  ExcelSelect.tsx  FileField.tsx  InputFieldDescription.tsx  SubmitBtn.tsx  TextField.tsx  TextareaField.tsx
src/components/form/: ActionButton.tsx  FormFooter.tsx  UnstyledButton.tsx
src/router/: index.tsx
src/screens/: Home.tsx  Settings.tsx
src/styles/: App.css  App.css.map  App.scss  Buttons.css  Buttons.css.map  Theme.tsx  _header.scss  _icons.scss  _progress_bar.scss  _zeroing.scss  header.css  header.css.map  header.scss  main.css  main.css.map  main.scss
