[package]
name = "mail_sender_tauri_vite_solid"
version = "0.0.0"
description = "A Tauri App"
authors = ["BAPEHNKK"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
mime_guess = "2.0.3"

tokio = { version = "1.20.1", features = ["full"] }

lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }
ndarray = "0.15.6"

calamine = "0.19.1"
regex = "1.7.1"

tracing = "0.1.36"
tracing-subscriber = "0.3.15"






[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
